--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
+    "@google/generative-ai": "^0.24.1",
     "maplibre-gl": "^5.8.0",
+    "marked": "^17.0.1",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
